Fixing whitespace issue on contact

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -288,6 +288,7 @@ footer {
 #contact_page {
   dl {
     @extend .row;
+    margin-bottom: 0;
     dt {
       @extend .col-md-2;
       @extend .text-right;
@@ -303,7 +304,11 @@ footer {
       &+dd {
         @extend .offset-md-2;
       }
-
+    }
+    &.address {
+      dd {
+        white-space: pre;
+      }
     }
   }
 }
